# QRT_comp

./: .gitignore  PRODUCTION_STRATEGIES.md  RESEARCH.md  RESEARCH_RANGE_MOMENTUM.md  _repickle_data.py  alpha101_4leg_test.py  alpha101_beta_test.py  alpha101_bucket_enum.py  alpha101_consistency.py  alpha101_consistent_ensemble.py  alpha101_decile_charts.py  alpha101_decile_tests.py  alpha101_ensemble.py  alpha101_ensemble_3sleeve.py  alpha101_ensemble_4sleeve.py  alpha101_ensemble_floor.py  alpha101_ensemble_oos.py  alpha101_final.py  alpha101_legs_oos.py  alpha101_mom_sweep.py  alpha101_pipeline.py  alpha101_portfolio.py  alpha101_report.py  alpha101_shortlist.py  alpha101_style_yearly.py  alpha101_verify.py  alpha101_vs_sleeves.py  alpha_pipeline.py  analyze_3day_report.py  analyze_pnl.py  analyze_report.py  attribute_strategies.py  build_ric_map.py  calc_beta.py  compare_stat_arb_configs.py  create_final_submission.py  curate_pairs.py  ensemble_attribution.py  ensemble_iv_overlay.py  ensemble_pipeline.py  (+47 more)
.claude/: settings.local.json
alpha101/: README.md  __init__.py  alphas.py  data.py  operators.py
alpha101_results/: SELECTED_REPORT.md  decile_buckets_core.json  genuine_core.json  regime_alphas.json  selected_alphas.json  shortlist.json  yearly_detail.json
hidden_markov_model/: hmm.ipynb  hmm_model.py
momentum strategy/: bollinger.ipynb  universe.ipynb
qsec-client/: README.md  pyproject.toml
qsec-client/qsec_client/: sample_code.py
reports_received/: QSec_Detailed_IND22_2026-05-18.xlsx  QSec_Detailed_IND22_2026-05-26.xlsx  (+2 more)
round_1/: main.ipynb
(+2 files in other folders)
