[tool.isort]
profile = "black"
src_paths = ["qsec_client", "tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "PD901", "S101", "S113", "E203", "E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.poetry]
name = "qsec-client"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.5.0"
pandas = "^2.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
isort = "^5.13.2"
black = "^24.8.0"
ruff = "^0.6.8"
mypy = "^1.11.2"
pytest = "^8.3.3"
pandas-stubs = "^2.2.2.240909"
types-paramiko = "^3.5.0.20240928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
